--- a/bibleApp.css
+++ b/bibleApp.css
@@ -486,7 +486,7 @@ button {
 #context_menu .cmtitlebar code {
     display: inline-flex;
     align-items: center;
-    font-size:inherit;
+    font-size: 1.2em;
 }
 #context_menu code button.cmenusrchbtn {
     width: 1.75em;
@@ -528,11 +528,14 @@ button {
     left: -9px;
     top: -5px;
     width: 120%;
-    height: 115%;
+    height: 100%;
     background: var(--ref-img);
-    /* box-shadow: 0px -21px 3px 25px var(--scroll-track-bg-color); */
+    box-shadow: 0px -21px 0px 25px var(--scroll-track-bg-color);
     z-index: -1;
 }
+/* #context_menu .cmtitlebar code {
+    font-size: 1.2em;
+} */
 /* #context_menu .cmtitlebar::after{
     position: absolute;
     content: '';
