--- a/bibleApp.css
+++ b/bibleApp.css
@@ -22,6 +22,7 @@
     --vmultiple-hover:#fff39b;
     --vmultiple2-hover:rgba(255, 213, 0, 0.527);
     --nav-bg-color: #fbfbfb;
+    --crossrefbackground: #fffbf1;
     --vhlt-border: #8080809c;
     --vhlt: #ffffdd;
     --vhlt2: #ffff99;
@@ -41,7 +42,6 @@
     --verse-hover: rgb(248, 246, 241);
     --main-font: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     --top-bar-bground-color: #212121;
-    --darkmode-bg1color: #212121;
     --scroll-track-bg-color: #878787;
     --scroll-thumb-border-color: #000000;
     --scroll-thumb-bgcolor: #4b4b4b;
@@ -144,6 +144,9 @@ li li li{
 #ppp code, #context_menu code {
     font-size: var(--fontsize-ref);
 }
+#ppp code:hover, #context_menu code:hover {
+    z-index: 3;
+}
 .chptheading {
     background: var(--chpt) !important;
     border-bottom: 0.5px solid var(--grey);
@@ -187,10 +190,11 @@ code{position: relative; padding-top: 5px;}
 #show_crossref_comments button:not(:first-child){
     margin-left: 2px;
 }
-.showing_crossref .verse_crossref_button,
-.showing_versenote .verse_notes_button{
+/* .showing_crossref */ .verse_crossref_button,
+/* .showing_versenote */ .verse_notes_button {
     background: var(--greenish);
-    font-style: italic;
+    font-style: italic!important;
+    font-weight: bold!important;
 }
 .crossrefs, .verse_note{
     box-shadow: 0 2px 2px 0var(--scroll-track-bg-color);
@@ -198,14 +202,15 @@ code{position: relative; padding-top: 5px;}
 .crossrefs{
     position: relative;
     padding: 5px 5px 0 5px;
-    /* background: var(--whitesmoke); */
-    /* box-shadow: inset 0 1px 1px var(--black); */
+    background: var(--crossrefbackground);
+    box-shadow: inset 0 1px 4px var(--black);
     overflow: hidden;
     font-size: var(--fontsize-main);
     transition: max-height .2s ease-in-out;
     min-height: 10px;
     max-height: 500px;
-    /* margin-bottom:5px; */
+    padding: 8px;
+    margin-bottom:5px;
     line-height: auto;
     opacity: 1;
     /* z-index: 2; */
@@ -222,6 +227,15 @@ code{position: relative; padding-top: 5px;}
     box-shadow: 0 1px 1px var(--grey);
 }
 #verse_note{display: none; position: relative;}
+.verse_note:not(.note_temp_holder .verse_note), .note_temp_holder {
+    padding: 5px;
+    box-shadow: inset 0 -1px 5px var(--black),
+                inset 0 0px 5px var(--black),
+                inset 0 0px 5px var(--black);
+}
+.versenote_hidden {
+    padding: 0;
+}
 .verse_note {
     position: relative;
     display: flex;
@@ -237,7 +251,6 @@ code{position: relative; padding-top: 5px;}
     opacity: 1;
     background-color: var(--whitesmoke);
     font-size: 1.2em;
-    box-shadow: 0 4.5px 10px 3px var(--shadow-color);
     z-index: 1;
 }
 .verse_note #context_menu {
@@ -327,8 +340,8 @@ code{position: relative; padding-top: 5px;}
     position: absolute;
     width: 1em;
     height: 1em;
-    top: 0;
-    right: 0;
+    top: 5px;
+    right: 0.75em;
 }
 .closebtn.cmenu_closebtn:hover {
     background: url(images/cancel-svgrepo-com-BLACK.svg) center no-repeat;
@@ -1310,14 +1323,14 @@ border-right: var(--col2-border) solid auto!important;
     transform: rotate(135deg);
 }
 #topbartogglebtn span:first-of-type {
-    left: -0.27em;
+    left: -0.2em;
     transform: rotate(45deg);
 }
 #topbartogglebtn.active_button span:last-of-type {
     transform: rotate(45deg);
 }
 #topbartogglebtn span:last-of-type {
-    right: -0.27em;
+    right: -0.2em;
     transform: rotate(135deg);
 }
 /* TOP-HORIZONTAL BAR */
@@ -1676,10 +1689,13 @@ input:focus {
     --darkmode-border:rgba(214, 212, 170, 0.501);
     --darkmode-border-2:rgba(0, 132, 132, 0.779);
     --darkmode-border-2:#62776d;
+    --darkmode-bg1color: #212121;
     --img-cancel: url(images/cancel-svgrepo-com-DarkMode.svg);
     --img-chkbox:url(images/check-box-svgrepo-com-DarkMode.svg);
     --darkslategray:darkslategray;
     --darkslategray:rgb(107, 84, 0);
+    --crossrefbackground: #8d6500;
+    --crossrefbackground: rgb(8,4,0);
 }
 .darkmode button, .darkmode input {
     background-color: var(--vhlt);
@@ -1834,4 +1850,128 @@ input:focus {
     vertical-align:top;
     border: 1px solid grey;
     padding-left: 0.5em;
+}
+
+/* VERSE GROUPS */
+.v_markers {
+    display:flex;
+    flex-wrap: wrap;
+    position: relative;
+    width: 100%;
+    background: var(--whitesmoke);
+    min-height: 1em;
+    /* overflow: visible; */
+    z-index: 1;
+    /* margin-bottom: 5px; */
+    padding-top: 5px;
+    padding-bottom: 5px;
+    box-shadow: inset 0px 1px 0px var(--black), inset 0px -1px 0px var(--black);
+}
+/* .vmultiple:hover .v_markers {
+    margin-bottom: 0px;
+    padding-bottom: 8px; 
+}
+.v_markers:hover {
+    z-index: 1;
+} */
+
+button.add_vMarker {
+    font-size: 1;
+    box-shadow: inset 0px 1px 0px var(--black), inset 0px -1px 0px var(--black);
+}
+button.add_vMarker:not(:first-child) {
+    margin-left: 5px;
+}
+div.v_markerinputnbtn_holder {
+    position: relative;
+    display:flex;
+    z-index: -1;
+}
+div.v_markers .vmarker:first-of-type {
+    margin-left: 0.5em;
+}
+div.v_markers .vmarker {
+    font-style: italic;
+    /* font-weight: bold; */
+    cursor: pointer;
+}
+div.v_markers .vmarker:hover {
+    color: var(--brown);
+}
+div.v_markerinputnbtn_holder button img {
+    width: 1em;
+}
+div.v_markers div#autocomplete_items {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: var(--whitesmoke);
+    width:calc(100% - 1.6em);
+    z-index: 99;
+}
+/* div.v_markers:not(:hover) div#autocomplete_items {
+    display: none;
+} */
+/* div.v_markerinputnbtn_holder input:not(:focus) ~ div#autocomplete_items {
+    display: none;
+} */
+#autocomplete_items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+    color: black!important;
+}
+#autocomplete_items div:hover {
+    /*when hovering an item:*/
+    background-color: #e9e9e9;
+}
+.autocomplete_active {
+    /*when navigating through the items using the arrow keys:*/
+    background-color: DodgerBlue !important;
+    color: #ffffff;
+}
+
+#vmarker_options_menu {
+    position: absolute;
+    background-color: var(--whitesmoke);
+    top: 100%;
+    border: 1px solid grey;
+    border-radius: 2.5px;
+    border-bottom-left-radius: 7.5px;
+    border-bottom-right-radius: 7.5px;
+    overflow: hidden;
+}
+#vmarker_options_menu h4,
+#vmarker_options_menu h5,
+#vmarker_options_menu code {
+    display: block;
+    border-bottom: 2px solid brown;
+    margin: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+    cursor: default;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 0.75em;
+}
+#vmarker_options_menu code:hover {
+    color: var(--black);
+}
+#vmarker_options_menu .vmarker_options,
+#vmarker_options_menu button {
+    margin: 0px!important;
+    justify-content:left;
+    padding-left: 0.7em;
+    width: 100%;
+    border-bottom: 1px solid var(--grey);
+    font-weight: bold;
+    font-size: 0.75em;
+}
+#vmarker_options_menu .vmarker_options:hover {
+    background-color: var(--span-hover);
+    cursor: pointer;
+    /* color: blue; */
+    font-weight: normal;
+    padding-left: 0.8em;
 }
