--- a/bibleApp.css
+++ b/bibleApp.css
@@ -22,7 +22,7 @@
     --vmultiple-hover:#fff39b;
     --vmultiple2-hover:rgba(255, 213, 0, 0.527);
     --nav-bg-color: #fbfbfb;
-    --crossrefbackground: #fffbf1;
+    --crossrefbackground: #f3f0ff;
     --vhlt-border: #8080809c;
     --vhlt: #ffffdd;
     --vhlt2: #ffff99;
@@ -214,6 +214,9 @@ code{position: relative; padding-top: 5px;}
     line-height: auto;
     opacity: 1;
     /* z-index: 2; */
+}
+.darkmode .crossrefs {
+    background: transparent;
 }
 .crfnnote {
     margin-bottom: 5px;
@@ -1660,10 +1663,12 @@ input:focus {
 /* DARKMODE SECTION *//* @media (prefers-color-scheme: dark) */
 .darkmode {
     --verse-hover: transparent;
-    --ref-img: rgb(18, 18, 18);
-    --ref-img: rgb(10, 9, 12);
-    --ref-img: #0a0c10;
-    --ref-img: #181a1b;
+    --ref-img:#202124;
+    --ref-img:#25262c;
+    --ref-img:#121212;
+    --whitesmoke:#202124;
+    --whitesmoke:#25262c;
+    --whitesmoke:#121212;
     --vmultiple-hover: rgb(0, 13, 13);
     --vhlt: rgb(0, 21, 21);
     --vhlt2: rgb(0, 39, 39);
@@ -1676,12 +1681,9 @@ input:focus {
     --versenote-contextmenu: rgb(18, 18, 18);
     --verse-higlight:rgb(18, 18, 18);
     --chpt:rgb(0, 25, 26);
-    --chpt2: rgb(0, 0, 0);
-    --vhlt3: rgb(10, 9, 12);
-    --vhlt3: rgb(8,4,0);
-    --whitesmoke: rgb(18, 18, 18);
-    --whitesmoke: rgb(10, 9, 12);
-    --whitesmoke: rgb(8,4,0);
+    --chpt2:rgb(0, 0, 0);
+    --vhlt3:rgb(10, 9, 12);
+    --vhlt3:rgb(8,4,0);
     --buttons:rgb(0, 12, 12);
     --buttons-txtcolor:rgb(245, 255, 251);
     --buttons-txtcolor:#e8e6e3;
@@ -1690,12 +1692,12 @@ input:focus {
     --darkmode-border-2:rgba(0, 132, 132, 0.779);
     --darkmode-border-2:#62776d;
     --darkmode-bg1color: #212121;
-    --img-cancel: url(images/cancel-svgrepo-com-DarkMode.svg);
+    --img-cancel:url(images/cancel-svgrepo-com-DarkMode.svg);
     --img-chkbox:url(images/check-box-svgrepo-com-DarkMode.svg);
     --darkslategray:darkslategray;
     --darkslategray:rgb(107, 84, 0);
-    --crossrefbackground: #8d6500;
-    --crossrefbackground: rgb(8,4,0);
+    --crossrefbackground:#8d6500;
+    --crossrefbackground:rgb(8,4,0);
 }
 .darkmode button, .darkmode input {
     background-color: var(--vhlt);
@@ -1887,17 +1889,48 @@ div.v_markerinputnbtn_holder {
     display:flex;
     z-index: -1;
 }
-div.v_markers .vmarker:first-of-type {
+div.v_markers .vmarker:first-of-type,
+.markernote + .vmarker {
     margin-left: 0.5em;
 }
 div.v_markers .vmarker {
+    position: relative;
     font-style: italic;
-    /* font-weight: bold; */
     cursor: pointer;
 }
 div.v_markers .vmarker:hover {
     color: var(--brown);
 }
+
+div.v_markers .vmarker.hasnote {
+    /* background-color: rgba(255, 192, 203, 0.37); */
+    border-bottom: 3px dotted crimson;
+    color:crimson;
+}
+div.v_markers .vmarker.showingNote {
+    box-shadow: inset 0 1px var(--shadow-color), inset 0 -1px var(--shadow-color);
+    border-top-left-radius: 0.2em;
+    border-top-right-radius: 0.2em;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    border-left: 1px solid;
+    border-right: 1px solid;
+}
+div.v_markers .vmarker.showingNote + .markernote{
+    position: relative;
+    border-radius: 0.2em;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+}
+/* div.v_markers .vmarker.hasnote:after {
+    content:"* ";
+    position: absolute;
+    font-size: 125%;
+    top: -0.2em;
+    left: -0.4em;
+    font-weight: bold;
+    color: red;
+} */
 div.v_markerinputnbtn_holder button img {
     width: 1em;
 }
@@ -1936,11 +1969,14 @@ div.v_markers div#autocomplete_items {
     position: absolute;
     background-color: var(--whitesmoke);
     top: 100%;
+    width: 10em;
     border: 1px solid grey;
     border-radius: 2.5px;
     border-bottom-left-radius: 7.5px;
     border-bottom-right-radius: 7.5px;
     overflow: hidden;
+    box-shadow: -2px 1px 8px -2px var(--shadow-color),
+                2px 1px 8px -1px var(--shadow-color);
 }
 #vmarker_options_menu h4,
 #vmarker_options_menu h5,
@@ -1961,17 +1997,65 @@ div.v_markers div#autocomplete_items {
 #vmarker_options_menu .vmarker_options,
 #vmarker_options_menu button {
     margin: 0px!important;
-    justify-content:left;
     padding-left: 0.7em;
     width: 100%;
     border-bottom: 1px solid var(--grey);
-    font-weight: bold;
-    font-size: 0.75em;
+    justify-content:left;
+    font-size: 1em;
+    text-align: left;
 }
-#vmarker_options_menu .vmarker_options:hover {
+#vmarker_options_menu .vmarker_options:not(:disabled):hover {
     background-color: var(--span-hover);
     cursor: pointer;
-    /* color: blue; */
     font-weight: normal;
-    padding-left: 0.8em;
+    box-shadow: 0.4em 0 1px 0 orange;
+}
+#vmarker_options_menu .vmarker_options:not(:disabled):active {
+    font-weight: bold;
+    box-shadow: inset 0.6em 0 1px 0 red;
+}
+.markernote {
+    display: block;
+    width: 100%;
+    border: 1px solid rosybrown;
+    padding: 5px;
+    background: var(--whitesmoke);
+    min-height: 1.5em;
+    margin-bottom: 0.2em;
+}
+.markernote textarea {
+    width: 100%;
+    min-height: 1.5em;
+}
+.markernote button {
+    min-height: 1em;
+}
+.markernote .markernotesavebtn {
+    border-bottom-left-radius: 0.2em;
+}
+.markernote .closebtn {
+    top: -1.1em;
+    right: 0.2em;
+}
+.markernotetext {
+    display: block;
+    width: 100%;
+    /* background-color: palegoldenrod!important; */
+    border-bottom: 2px solid rosybrown;
+}
+.markernote > p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.markernotetext > p {
+    min-height: 1em!important;
+    margin: 0;
+}
+.markernotetext > p:empty {
+    background-color: palegoldenrod;
+    padding:0;
+    border: 1px solid red;
+}
+.eng2grk_sup_btns input {
+    pointer-events: none;
 }
