--- a/page2_versenotes.css
+++ b/page2_versenotes.css
@@ -19,8 +19,8 @@ body * {
     border-right: 2px solid black;
 }
 #col2 {
+    position: relative;
     height: 100%;
-    /* min-width: calc(100vw - 200px)!important; */
     width: 100%;
     position: relative;
     overflow-y: auto;
@@ -58,6 +58,7 @@ details {
 }
 #col2 details summary {
     border-bottom: 1px solid var(--grey)!important;
+    padding-top: 0.3em;
 }
 details summary {
     margin-bottom: 0!important;
@@ -90,10 +91,6 @@ span[ref]:hover, .strnum:hover {
     font-size: 0.7em;
     padding-top: 0;
 }
-summary, #context_menu summary {
-    background: rgb(250, 255, 200);
-    background: #f6f6e3;
-}
 summary h1, summary .openCloseIconHolder, summary div {
     margin-top: 0!important;
     margin-bottom: 0!important;
@@ -102,15 +99,31 @@ summary h1, summary .openCloseIconHolder, summary div {
 summary:has(.openCloseIconHolder) {
     padding: 0;
 }
-#context_menu .cmtitlebar::before {
+summary, #context_menu summary {
+    background: rgb(250, 255, 200);
+    background: #f6f6e3;
+}
+#context_menu .cmtitlebar{
+    color: white!important;
+}
+#context_menu .cmtitlebar::before{
+    background: rgb(250, 255, 200);
+    background: #6d2f00!important;
+}
+#context_menu:not([strnum]) .cmtitlebar::before {
     height: 2em;
     width: 105%;
 }
 #context_menu code {
     font-size: 0.85em;
 }
-#context_menu[strnum]>.cmtitlebar {
+#context_menu[strnum] .cmtitlebar .cmenusrchbtn
+{
     display: none;
+}
+#context_menu[strnum] .cmtitlebar hr
+{
+    margin: 0;
 }
 
 /* HIDE SHOW BUTTONS */
