--- a/bibleApp.css
+++ b/bibleApp.css
@@ -69,6 +69,7 @@
     --brown:brown;
     --whitish_noteContextMenu: rgb(252, 252, 252);
     --col2-border:0.05em;
+    --btn-radius:0.25em;
 }
 ::selection {
     background-color: var(--selection);
@@ -483,10 +484,15 @@ span.vmultiple.noted code #verse_notes_button {
     font-size: var(--fontsize-scripture-nav)!important;
     box-shadow: 0px 0px 10px 7px var(--shadow-color);
 }
-#bible_nav option {
-    padding-left: 7px;
-    box-shadow: inset 0px 0px 1px 0px var(--black);
-    border-radius: 5px;
+#bible_nav .bkname{
+    justify-content: flex-start;
+    padding-left: 0.5em;
+}
+#bible_nav .bkname, #bible_nav .chptnum {
+    width: 100%;
+    /* padding-left: 7px; */
+    /* box-shadow: inset 0px 0px 1px 0px var(--black); */
+    /* border-radius: 5px; */
 }
 .refnav .bible_nav {
     height: 99.5%;
@@ -515,7 +521,7 @@ span.vmultiple.noted code #verse_notes_button {
 .tmp_hlt {
     background-color: var(--ref-hlt);
 }
-#bible_chapters>option {
+#bible_chapters > .chptnum {
     display: none;
 }
 .show_chapter {
@@ -1413,7 +1419,8 @@ border-right: var(--col2-border) solid auto!important;
 }
 #topbartogglebtn {
     position: absolute;
-    top: calc(100% + 0.2em);
+    /* top: calc(100% + 0.2em); */
+    top: 95%;
     right: 0.5em;
     right: 0.85em;
     width: 2.95rem;
@@ -2240,22 +2247,23 @@ div.v_markers div#autocomplete_items {
     display: flex;
     flex-direction: column;
 }
-#bottomleft_btns button {
+#bottomleft_btns button {background: var(--chpt) !important;}
+#bottomleft_btns button, #topbartogglebtn {
     width: var(--width-sidebuttons);
     min-width: 45px;
     height: var(--width-sidebuttons);
     border: 2px solid #eddddd30!important;
     background: #eaeaea6b;
+    box-shadow: 2.75px 2.75px 0 0.05em var(--black);
     transition: all 0.5s;
-    background: var(--chpt) !important;
 }
 #bottomleft_btns button:hover {
     opacity: 1;
     transition: all 0.5s;
 }
 #bottomleft_btns #gotochpt_prev {
-    border-top-left-radius: 0.25em;
-    border-top-right-radius: 0.25em;
+    border-top-left-radius: var(--btn-radius);
+    border-top-right-radius: var(--btn-radius);
 }
 #bottomleft_btns button:hover {
     background: brown !important;
@@ -2264,10 +2272,10 @@ div.v_markers div#autocomplete_items {
     background: pink !important;
     border: 5px solid brown!important;
 }
-#bottomleft_btns #gotochpt_next {
-    margin-top: 0.25em;
-    border-bottom-left-radius: 0.25em;
-    border-bottom-right-radius: 0.25em;
+#bottomleft_btns #gotochpt_next{margin-top: 0.25em;}
+#bottomleft_btns #gotochpt_next,#topbartogglebtn {
+    border-bottom-left-radius: var(--btn-radius);
+    border-bottom-right-radius: var(--btn-radius);
 }
 #bottomleft_btns #gotochpt_next img {
     transform: rotate(180deg);
