--- a/bibleApp.css
+++ b/bibleApp.css
@@ -114,7 +114,7 @@ body>svg {
 }
 /* svg{
     filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
-} */
+}*/
 button * {pointer-events: none;}
 .text_content:empty::before{
     content: 'Take down a comment to the verse';
@@ -181,7 +181,7 @@ li li li{
 /* #refnav button:last-child {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-} */
+}*/
 button#darkmodebtn {
     font-family: apple color emoji,segoe ui emoji,notocoloremoji,segoe ui symbol,android emoji,emojisymbols,emojione mozilla;
 }
@@ -249,7 +249,7 @@ span.vmultiple.noted code #verse_notes_button {
 }
 /* #show_crossref_comments button:not(:first-child){
     margin-left: 2px;
-} */
+}*/
 #show_crossref_comments #verse_marker_button {
     flex: 100%;
 }
@@ -478,11 +478,16 @@ span.vmultiple.noted code #verse_notes_button {
     display: flex;
     justify-content: center;
     align-items: center;
-}    
+}
+#refnav #app_settings>button:last-child {
+    border-bottom-left-radius: 0.25em;
+    border-bottom-right-radius: 0.25em;
+}
 #bible_nav {
     background-color: transparent;
     font-size: var(--fontsize-scripture-nav)!important;
     box-shadow: 0px 0px 10px 7px var(--shadow-color);
+    display: flex;
 }
 #bible_nav .bkname{
     justify-content: flex-start;
@@ -642,7 +647,7 @@ button {
 }
 /* #context_menu .cmtitlebar code {
     font-size: 1.2em;
-} */
+}*/
 /* #context_menu .cmtitlebar::after{
     position: absolute;
     content: '';
@@ -653,7 +658,7 @@ button {
     width: 110%;
     height: 0px;
     z-index: -1;
-} */
+}*/
 #context_menu:not(.win2) .cmtitlebar~span{
     font-size:var(--fontsize-scripture);
 }
@@ -712,7 +717,7 @@ span[strnum] > span[strnum] {
 /* span.vmultiple {
     position: relative;
     z-index: 3;
-} */
+}*/
 span.verse:hover:not(.vhlt),
 span.vmultiple:hover {
     transition: background 0.05s ease-in-out;
@@ -791,7 +796,7 @@ span.vmultiple:hover{
     inset 2px 0px 0px 0px var(--grey),
     inset -2px 0px 0px 0px var(--grey);
     transition: 250ms ease-in;
-} */
+}*/
 .v_dblclckd {
     background-color: var(--vhlt-hover);
     border-radius: 10px;
@@ -1016,7 +1021,6 @@ sup {
     font-size: var(--fontsize-main);
 }
 .bible_nav {
-    float: left;
     overflow-y: scroll;
     height: 100%;
     font-weight: bold;
@@ -1098,7 +1102,7 @@ details[open] > summary > div:first-of-type {
 }
 /* #bibleapp_cache label,#bibleapp_cache input {
     display: inline!important;
-} */
+}*/
 #cache_table {
     width: 100%;
     display: table!important;
@@ -1119,14 +1123,11 @@ details[open] > summary > div:first-of-type {
 }
 #searchPreviewWindowFixed,
 #strongsdefinitionwindow{
+    min-width: 200px;
     max-width: 400px;
     height: 100%;
     overflow-x: hidden;
-    /* overflow-y: scroll; */
 }
-/* #strongsdefinitionwindow details.strngsdefinition {
-    max-width: 400px;
-} */
 #resizerdiv {
     display: none;
 }
@@ -1142,6 +1143,7 @@ details[open] > summary > div:first-of-type {
 }
 #bible_versions {
     font-size: var(--fontsize-main);
+    min-width: 150px;
 }
 .strngsdefinition h1,
 .strngsdefinition h2,
@@ -1156,7 +1158,7 @@ details[open] > summary > div:first-of-type {
 }
 /* .strngsdefinition .strnum {
     transition: none!important;
-} */
+}*/
 .strngsdefinition h5,h6 {
     margin: 0px 5px 0px 0px;
     padding-left: 7.5px;
@@ -1171,7 +1173,7 @@ details[open] > summary > div:first-of-type {
 }
 summary {
     background-color: inherit;
-} */
+}*/
 #strongsdefinition_text h5,h6 {
     position: relative;
     margin: 0px;
@@ -1202,7 +1204,7 @@ summary {
     padding-bottom: 7px;
     margin-bottom: 7px;
     height: 100%;
-    width: 400px;
+    width: 350px;
 }
 #searchPreviewWindowFixed #context_menu {
     left: 5px!important;
@@ -1261,7 +1263,7 @@ summary {
 }
 /* #searchPreviewFixed .chptheading+.verse {
     margin-top: 5px;
-} */
+}*/
 #searchdiv_fixed {
     display: flex;
     width: 100%;
@@ -1285,7 +1287,8 @@ input#wordsearch_fixed {
 }
 
 ::-webkit-scrollbar {
-    width: 7.5px;
+    width: 0.35em;
+    height: 0.35em;
 }
 
 ::-webkit-scrollbar-track {
@@ -1423,15 +1426,14 @@ border-right: var(--col2-border) solid auto!important;
 #topbartogglebtn {
     position: absolute;
     /* top: calc(100% + 0.2em); */
-    top: 95%;
+    top: 99%;
     right: 0.5em;
     right: 0.85em;
     width: 2.95rem;
     height: 2.15rem;
     background: var(--ref-img);
-    background: transparent;
     border-radius: 0 0 0.15em 0.15em;
-    box-shadow: 2.75px 2.75px 0 0.05em darkgrey;
+    box-shadow: 2.75px 2.75px 0 0.05em black;
     width: calc(var(--width-sidebuttons) * 1.15);
     height: calc(var(--width-sidebuttons) * 0.8);
     border-radius: 1px;
@@ -1441,7 +1443,7 @@ border-right: var(--col2-border) solid auto!important;
     position: relative;
     width: 0.65rem;
     height: 1.6rem;
-    background-color: var(--grey);
+    background-color: var(--black);
     display: inline-block;
     transition: all 0.2s ease;
     /* width: calc(var(--fontsize-refnsearch) * 0.65);
@@ -1449,6 +1451,12 @@ border-right: var(--col2-border) solid auto!important;
     width: calc(var(--width-sidebuttons) * 0.15);
     height: calc(var(--width-sidebuttons) * 0.65);
     border: none;
+}
+#topbartogglebtn:hover span {
+    background-color: var(--white);
+}
+#topbartogglebtn:active span {
+    background-color: var(--black);
 }
 #topbartogglebtn.active_button span:first-of-type {
     transform: rotate(135deg);
@@ -1488,7 +1496,7 @@ border-right: var(--col2-border) solid auto!important;
 }
 /* #ref_search_versions_holder > div input:not([type=checkbox]) {
     width: 100px;
-} */
+}*/
 #top_horizontal_bar_buttons>button {
     font-size:var(--width-mainbutton);
     padding: 0;
@@ -1506,7 +1514,7 @@ border-right: var(--col2-border) solid auto!important;
     flex-wrap: wrap;
 }
 /* #refdiv {background-color: yellow;}
-#bibleversions_btns {background-color: greenyellow;} */
+#bibleversions_btns {background-color: greenyellow;}*/
 #searchdiv {border: var(--buttons-border);}
 #searchdiv * {
     border-top: none;
@@ -1542,7 +1550,7 @@ border-right: var(--col2-border) solid auto!important;
     font-weight:bolder;
     font-size: 40px;
     flex-grow: 1;
-}   
+}
 
 /* SEARCH */
 #wordsearch{
@@ -1645,7 +1653,7 @@ border-right: var(--col2-border) solid auto!important;
 }
 /* #bibleapp_available_notes details:hover {
     background: var(--verse-hover);
-} */
+}*/
 #bibleapp_available_notes details:hover > summary {
     background: var(--selection);
 }
@@ -1713,7 +1721,7 @@ button .checkboxreplacement:has(input[type="checkbox"]:checked):before {
 
 /* body:has(#top_horizontal_bar_buttons.slideup) #sidemenubtn_rightbottom {
     display: block;
-} */
+}*/
 input:focus {
     outline: none;
 }
@@ -1792,14 +1800,16 @@ input:focus {
     --versenote-contextmenu: rgb(18, 18, 18);
     --verse-higlight:rgb(18, 18, 18);
     --chpt:rgb(0, 25, 26);
+    --chpt:rgb(53, 42, 17);
     --chpt2:rgb(0, 0, 0);
     --vhlt3:rgb(10, 9, 12);
     --vhlt3:rgb(8,4,0);
     --buttons:rgb(0, 12, 12);
     --buttons-txtcolor:rgb(245, 255, 251);
     --buttons-txtcolor:#e8e6e3;
+    --buttons-txtcolor:#ffffff;
     --darkmode-border:rgb(0, 78, 78);
-    --darkmode-border:rgba(214, 212, 170, 0.501);
+    --darkmode-border:#807e5880;
     --darkmode-border-2:rgba(0, 132, 132, 0.779);
     --darkmode-border-2:#62776d;
     --darkmode-bg1color: #212121;
@@ -1812,6 +1822,7 @@ input:focus {
 }
 .darkmode button, .darkmode input {
     background-color: var(--vhlt);
+    background-color: var(--chpt2);
     color: var(--buttons-txtcolor)!important;
 }
 .darkmode #strongsdefinitionwindow summary>div:first-of-type, .darkmode summary>div:first-of-type {
@@ -1883,7 +1894,7 @@ input:focus {
 }
 .darkmode #sidemenubtn_rightbottom {
     background-color: var(--darkmode-border-2);
-}   
+}
 .darkmode #topbartogglebtn span {
     background-color: grey;
 }
@@ -1893,11 +1904,12 @@ input:focus {
 /* .darkmode .active_button, .darkmode #searchsettings.active_button {
     background-color: burlywood!important;
     color: #000!important;
-} */
+}*/
 .darkmode .active_button, .darkmode #searchsettings.active_button {
     background-color: grey !important;
     background-color: #3f5560 !important;
     background-color: #3f6056 !important;
+    background-color: var(--chpt) !important;
 }
 .darkmode #refnav_col2, .darkmode #togglenavbtn {
     border-right: var(--col2-border) solid var(--darkmode-border)!important;
@@ -1982,7 +1994,7 @@ input:focus {
 }
 .v_markers:hover {
     z-index: 1;
-} */
+}*/
 
 button.add_vMarker {
     font-size: 1;
@@ -2037,7 +2049,7 @@ div.v_markers .vmarker.showingNote + .markernote{
     left: -0.4em;
     font-weight: bold;
     color: red;
-} */
+}*/
 div.v_markerinputnbtn_holder button img {
     width: 1em;
 }
@@ -2051,10 +2063,10 @@ div.v_markers div#autocomplete_items {
 }
 /* div.v_markers:not(:hover) div#autocomplete_items {
     display: none;
-} */
+}*/
 /* div.v_markerinputnbtn_holder input:not(:focus) ~ div#autocomplete_items {
     display: none;
-} */
+}*/
 #autocomplete_items div {
     padding: 10px;
     cursor: pointer;
@@ -2251,13 +2263,17 @@ div.v_markers div#autocomplete_items {
     flex-direction: column;
 }
 #bottomleft_btns button {background: var(--chpt) !important;}
+body:not(.darkmode) #bottomleft_btns button, body:not(.darkmode) #topbartogglebtn {
+    background: #eaeaea6b;
+    border: 1px;
+    box-shadow: 2px 2px 5px 0 black;
+}
 #bottomleft_btns button, #topbartogglebtn {
     width: var(--width-sidebuttons);
     min-width: 45px;
     height: var(--width-sidebuttons);
-    border: 2px solid #eddddd30!important;
-    background: #eaeaea6b;
-    box-shadow: 2.75px 2.75px 0 0.05em var(--black);
+    border: 1px solid #333333!important;
+    box-shadow: 2.75px 2.75px 0 0.05em black;
     transition: all 0.5s;
 }
 #bottomleft_btns button:hover {
@@ -2268,12 +2284,13 @@ div.v_markers div#autocomplete_items {
     border-top-left-radius: var(--btn-radius);
     border-top-right-radius: var(--btn-radius);
 }
-#bottomleft_btns button:hover {
+#bottomleft_btns button:hover, #topbartogglebtn:hover {
     background: brown !important;
 }
-#bottomleft_btns button:active {
+#bottomleft_btns button:active, #topbartogglebtn:active {
     background: pink !important;
     border: 5px solid brown!important;
+    transform: scale(0.9) !important;
 }
 #bottomleft_btns #gotochpt_next{margin-top: 0.25em;}
 #bottomleft_btns #gotochpt_next,#topbartogglebtn {
